assert(!needs_patching && x->is_loaded(),"how do we know it's volatile if it's not loaded")

XMLWordPrintable

    • b05
    • generic, x86
    • generic, linux_redhat_5.0
    • Not verified

        Application run with debug solaris-i586 VM and stress options crashes with

        # Internal Error (/export0/BUILD_AREA/jdk6_21/hotspot/src/share/vm/c1/c1_LIRGenerator.cpp:1595), pid=25387, tid=13
        # Error: assert(!needs_patching && x->is_loaded(),"how do we know it's volatile if it's not loaded")

        Stack trace:
        V [libjvm.so+0xb5eb75];; void VMError::report(outputStream*)+0x5fd
        V [libjvm.so+0xb5fbe9];; void VMError::report_and_die()+0x4b5
        V [libjvm.so+0x3a9873];; void report_assertion_failure(const char*,int,const char*)+0x5f
        V [libjvm.so+0x1d2e3c];; void LIRGenerator::do_LoadField(LoadField*)+0x46c
        V [libjvm.so+0x19ea74];; void LoadField::visit(InstructionVisitor*)+0x14
        V [libjvm.so+0x1cbea9];; void LIRGenerator::do_root(Instruction*)+0x75
        V [libjvm.so+0x1cbe0f];; void LIRGenerator::block_do(BlockBegin*)+0x53
        V [libjvm.so+0x19cdbc];; void BlockList::iterate_forward(BlockClosure*)+0x6c
        V [libjvm.so+0x19604b];; void IR::iterate_linear_scan_order(BlockClosure*)+0x27
        V [libjvm.so+0x1630f2];; void Compilation::emit_lir()+0x2b6
        V [libjvm.so+0x1636cf];; int Compilation::compile_java_method()+0x1fb
        V [libjvm.so+0x1639fc];; void Compilation::compile_method()+0x84
        V [libjvm.so+0x16422a];; Compilation::Compilation(AbstractCompiler*,ciEnv*,ciMethod*,int)+0x252
        V [libjvm.so+0x1655ea];; void Compiler::compile_method(ciEnv*,ciMethod*,int)+0xda
        V [libjvm.so+0x3412a8];; void CompileBroker::invoke_compiler_on_method(CompileTask*)+0xbec
        V [libjvm.so+0x33fbd5];; void CompileBroker::compiler_thread_loop()+0x8ad
        V [libjvm.so+0xa99ac6];; void compiler_thread_entry(JavaThread*,Thread*)+0x2a
        V [libjvm.so+0xa92796];; void JavaThread::thread_main_inner()+0x16e
        V [libjvm.so+0xa924ce];; void JavaThread::run()+0x34e
        V [libjvm.so+0x93a5dd];; java_start+0x109
        C [libc.so.1+0xa7045];; _thr_setup+0x4e
        C [libc.so.1+0xa7330];; _lwp_start+0x0

              Assignee:
              Tom Rodriguez
              Reporter:
              Nicolay Haustov (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: