6965570: assert(!needs_patching && x->is_loaded(),"how do we know it's volatile if it's not loaded")

Reviewed-by: iveresov